# game_price_tracker

./: .gitignore  README.md  package-lock.json
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/tracker/: admin.py  auth_views.py  models.py  urls.py  views.py
backend/tracker/management/commands/: ingest_steam_games.py  ingest_steam_wishlist_prices.py
backend/tracker/migrations/: 0001_initial.py  0002_trigram_extension.py
frontend/: package-lock.json  package.json
frontend/app/: app.vue
frontend/app/components/: MainHeader.vue
frontend/app/composables/: useCsrf.ts  useUser.ts
frontend/app/pages/: about.vue  index.vue  login.vue
frontend/app/stores/: auth.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: GameSearchCard.vue  MainFooter.vue  MainHeader.vue  WishlistCard.vue
frontend/src/composables/: useCsrf.ts
frontend/src/helper/: getCookie.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  wishlist.ts
frontend/src/views/: AboutView.vue  HomeView.vue  LoginView.vue  RegisterView.vue
