[project]
name = "game-price-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Pieng"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "django (>=5.2.8,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
